[project]
name = "docker-base-bookworm"
version = "0.0.1"
requires-python = "==3.11.6"
dependencies = [
    "supervisor==4.2.5",
    "supervisord-dependent-startup==1.4.0",
    "j2cli",
    # sonic-config-engine deps
    "bitarray==2.8.1",
    "ipaddress==1.0.23",
    "jinja2>=2.10",
    "lxml==4.9.1",
    "netaddr==0.8.0",
    "pyyaml==6.0.1",
    "natsort",
    # sonic-yang-mgmt deps
    "xmltodict==0.12.0",
    "ijson==3.2.3",
    "jsonpointer>=1.9",
    "jsondiff>=1.2.0",
    "tabulate==0.9.0",
    # libyang python bindings
    "libyang",
    "cffi",
    "build",
    "setuptools",

    # dockers-orchagent deps
    "scapy==2.4.5",
]
